ui for coins list fragment, some resources fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,13 @@
     <string name="eur">eur</string>
     <string name="usd_price">$ %f</string>
     <string name="eur_price">€ %f</string>
-    <string name="change_percentage_plus">+ %,.2f</string>
-    <string name="change_percentage_minus">- %,.2f</string>
+    <string name="change_percentage_plus">+ %,.2f%%</string>
+    <string name="change_percentage_minus">%,.2f%%</string>
     <string name="description">Описание</string>
     <string name="categories">Категории</string>
     <string name="error">Случилась какая-то ошибка :(\nПопробуем снова?</string>
     <string name="error_pull_refresh">Произошла ошибка при загрузке</string>
     <string name="error_try_again">Попробовать</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
