--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,10 @@
     <string name="coins_list_title">Список криптовалют</string>
     <string name="usd">usd</string>
     <string name="eur">eur</string>
-    <string name="usd_price">$ %f</string>
-    <string name="eur_price">€ %f</string>
-    <string name="change_percentage_plus">+ %,.2f%%</string>
-    <string name="change_percentage_minus">%,.2f%%</string>
+    <string name="usd_price">$ %,.2f</string>
+    <string name="eur_price">€ %,.2f</string>
+    <string name="change_percentage_plus">+ %.2f%%</string>
+    <string name="change_percentage_minus">%.2f%%</string>
     <string name="description">Описание</string>
     <string name="categories">Категории</string>
     <string name="error">Случилась какая-то ошибка :(\nПопробуем снова?</string>
