--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="eur_price">€ %,.2f</string>
     <string name="change_percentage_plus">+ %.2f%%</string>
     <string name="change_percentage_minus">- %.2f%%</string>
+    <string name="change_percentage_regular">%.2f%%</string>
     <string name="description">Описание</string>
     <string name="categories">Категории</string>
     <string name="error">Случилась какая-то ошибка :(\nПопробуем снова?</string>
